package com.andriidubovyk.wordsnap.common

object TestTags {
    const val ORDER_SECTION = "ORDER_SECTION"
    const val WORD_TEXT_FIELD = "WORD_TEXT_FIELD"
    const val DEFINITION_TEXT_FIELD = "DEFINITION_TEXT_FIELD"
    const val TRANSLATION_TEXT_FIELD = "TRANSLATION_TEXT_FIELD"
}