...
    <string name="good">GOOD</string>
    <string name="show_answer">Show Answer</string>
    <string name="next">Next</string>
    <string name="definition">Definition</string>
    <string name="translation">Translation</string>
    <string name="word">Word</string>
    <string name="add_flashcard">Add flashcard</string>
    <string name="flashcard_deleted">Flashcard deleted</string>
    <string name="undo">Undo</string>
    <string name="score">Score</string>
    <string name="save_flashcard">Save flashcard</string>
    <string name="dictionary">Dictionary</string>
    <string name="select_definition">Select definition</string>
    <string name="signed_out">Signed out</string>
    <string name="profile_picture">Profile picture</string>
    <string name="sign_out">Sign out</string>
    <string name="backup_flashcard_to_the_cloud">Backup flashcards to the cloud</string>
...
